Bug 506394 - KCommandBar handles Escape key press, but passes Escape key release through to the app
Summary: KCommandBar handles Escape key press, but passes Escape key release through t...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfigwidgets
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.15.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-30 16:09 UTC by ratijas
Modified: 2025-07-03 22:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2025-06-30 16:09:57 UTC
SUMMARY

KCommandBar handles Escape key press and immediately closes the popup, leaving Escape key release to the app. For example, in Konsole app pressing Escape on the KCommandBar causes foreground terminal application to handle Escape as well (e.g. closing open files view in htop or whatever).


STEPS TO REPRODUCE
1. Open Konsole, launch htop, press 'e' to enter the `Environment of process` view
2. Press Ctrl+Alt+I to open KCommandBar
3. Press Escape to close KCommandBar

OBSERVED RESULT
KCommandBar closes, and htop returns from the Environment view to the main view.

EXPECTED RESULT
Widgets behind KCommandBar should not receive and process the Escape key release.
Konsole & htop is just one example where it might ruin the workflow.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.15.4-arch2-1 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 9 7940HS w/ Radeon 780M Graphics
Memory: 64 GiB of RAM (54.7 GiB usable)
Graphics Processor 1: AMD Radeon RX 7700S
Graphics Processor 2: AMD Radeon 780M Graphics

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-06-30 20:20:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfigwidgets/-/merge_requests/266