KCommandBar: Fix Escape key press and release leaking through

ShortcutOverride event is followed by key press and release. We should
accept the first ShortcutOverride, and only then hide() on key press,
so that the key press is not leaking through to the rest of the window.

See also: https://wiki.qt.io/ShortcutOverride

Co-authored-by: Waqar Ahmed <waqar.17a@gmail.com>
BUG: 506394